Display earnings and losses in /crime profile